# LazyAgents

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: actionlint.yaml
.github/installers/: lazyagents-installer.ps1.in  lazyagents-installer.sh.in  render-aggregator-installer.py
.github/workflows/: ci.yml  m2-smoke.yml  release.yml
crates/la-adapter/: Cargo.toml  README.md
crates/la-adapter/src/: claude.rs  codex.rs  ext_time.rs  lib.rs  opencode.rs
crates/la-adapter/tests/: adapter.rs  claude.rs  codex.rs  opencode.rs  real_claude.rs  real_codex.rs  real_opencode.rs
crates/la-config/: Cargo.toml
crates/la-config/src/: lib.rs  paths.rs  schema.rs  source.rs
crates/la-core/: Cargo.toml
crates/la-core/src/: error.rs  event_bus.rs  lib.rs  manager.rs  session.rs
crates/la-core/src/worktree/: diff.rs  git.rs  manager.rs  mod.rs  parser.rs
crates/la-core/tests/: bus_and_errors.rs  diff.rs  lifecycle.rs  worktree.rs
crates/la-core/tests/support/: mod.rs
crates/la-daemon/: Cargo.toml
crates/la-daemon/src/: config_cmd.rs  cron_control.rs  cron_security.rs  daemonize.rs  dispatcher.rs  doctor.rs  health.rs  install.rs  lib.rs  paths.rs  runtime.rs  scheduler.rs  signals.rs
crates/la-daemon/src/install/: actions.rs  cli.rs  launchd.rs  paths.rs  systemd.rs  template.rs  windows_task.rs
crates/la-daemon/templates/: config.example.toml  dev.lazyagents.lad.plist  lad-task.xml  lad.service
crates/la-daemon/tests/: acceptance.rs  wek26_discover_import.rs  wek28_diff.rs  wek29_health.rs  wek53_cron_security.rs  wek57_scheduler.rs  wek71_config.rs  wek73_install.rs
crates/la-daemon/tests/support/: mod.rs
crates/la-ipc/: Cargo.toml
crates/la-ipc/src/: codec.rs  connection.rs  handshake.rs  hub.rs  lib.rs  paths.rs  transport.rs
crates/la-ipc/tests/: cat_bin.rs  hub_uds.rs  named_pipe_acl.rs  round_trip.rs
crates/la-observ/: Cargo.toml
crates/la-observ/src/: lib.rs
crates/la-proto/: Cargo.toml
crates/la-proto/src/: chunking.rs  jsonrpc.rs  lib.rs  methods.rs  notifications.rs
crates/la-proto/tests/: round_trip.rs
crates/la-pty/: Cargo.toml  README.md
crates/la-pty/src/: lib.rs  platform.rs
crates/la-pty/tests/: smoke.rs
crates/la-scheduler/: Cargo.toml
crates/la-scheduler/src/: catchup.rs  clock.rs  command.rs  cron_spec.rs  error.rs  event.rs  heap.rs  lib.rs  scheduler.rs
crates/la-scheduler/src/quota/: backoff.rs  loadavg.rs  mod.rs
crates/la-scheduler/tests/: loop_simulation.rs
crates/la-storage/: Cargo.toml
crates/la-storage/migrations/: 0001_initial.sql  0002_worktree_hook_status.sql  0003_session_external_reference.sql  0004_crons_runs.sql
crates/la-storage/src/: lib.rs  models.rs  repos.rs  storage.rs
crates/la-storage/tests/: storage.rs  wek33_quota_admission.rs
crates/la-tui/: Cargo.toml
crates/la-tui/src/: app.rs  attach_pump.rs  bootstrap.rs  composer.rs  crons.rs  detach_notice.rs  diff_view.rs  health_sub.rs  input.rs  key_hints.rs  lib.rs  model.rs  notif_sub.rs  path_complete.rs  runner.rs  sidebar.rs  source.rs  status.rs  tabs.rs  term_grid.rs  theme.rs  transcript.rs  ui_prefs.rs  update_check.rs  vte_term.rs
crates/la-tui/src/source/: mod.rs  rpc.rs
crates/la-tui/tests/: acceptance.rs  attach_pump_live.rs  crons_acceptance.rs  health_sub_live.rs  notif_sub_live.rs  render_smoke.rs  rpc_source_live.rs  theme_acceptance.rs  update_check_fixture.rs
docs/: chaos.md  data-ownership.md  install.md  observability.md  security.md  upgrade.md
docs/adr/: 0001-cron-dst-fallback-take-first.md  0001-main-branch-protection.md  0002-cron-dst-fallback-take-first.md
docs/book/: README.md
docs/book/en/: book.toml
docs/book/en/src/: README.md  SUMMARY.md  adapters.md  crons.md  faq.md  install.md  quickstart.md  sessions.md  troubleshooting.md  worktree.md
docs/book/zh-CN/: book.toml
docs/book/zh-CN/src/: README.md  SUMMARY.md  adapters.md  crons.md  faq.md  install.md  quickstart.md  sessions.md  troubleshooting.md  (+1 more)
docs/schema/: adapters__discover.params.schema.json  adapters__discover.result.schema.json  cron__fired.params.schema.json  daemon__health.params.schema.json  events__subscribe.params.schema.json  events__subscribe.result.schema.json  initialize.params.schema.json  initialize.result.schema.json  metrics__scrape.params.schema.json  metrics__scrape.result.schema.json  projects__create.params.schema.json  projects__create.result.schema.json  projects__list.params.schema.json  projects__list.result.schema.json  scheduler__health.params.schema.json  session__gap.params.schema.json  session__output.params.schema.json  session__state.params.schema.json  sessions__archive.params.schema.json  sessions__archive.result.schema.json  sessions__attach.params.schema.json  sessions__attach.result.schema.json  sessions__create.params.schema.json  sessions__create.result.schema.json  sessions__delete.params.schema.json  sessions__delete.result.schema.json  sessions__detach.params.schema.json  sessions__detach.result.schema.json  sessions__import.params.schema.json  sessions__import.result.schema.json  sessions__list.params.schema.json  sessions__list.result.schema.json  sessions__replay.params.schema.json  sessions__replay.result.schema.json  sessions__resize.params.schema.json  sessions__resize.result.schema.json  sessions__signal.params.schema.json  sessions__signal.result.schema.json  sessions__write.params.schema.json  sessions__write.result.schema.json  (+13 more)
integration/m0-smoke/: Cargo.toml
integration/m0-smoke/src/: lib.rs
integration/m0-smoke/tests/: m0_smoke.rs
integration/m2-multi-backend/: Cargo.toml
integration/m2-multi-backend/tests/: m2_multi_backend.rs
integration/m2-smoke/: Cargo.toml  build.rs
integration/m2-smoke/tests/: backend_health.rs  index_race.rs  matrix.rs  snapshots.rs
integration/m2-smoke/tests/common/: mod.rs
integration/m4-macos-smoke/: Cargo.toml
integration/m4-macos-smoke/src/: lib.rs
integration/m4-macos-smoke/tests/: a6_socket_hardening.rs
report/: alpha-beta-results.md  spike-m0.md  产品设计文档.md  技术架构设计.md
