[workspace]
resolver = "2"
members = [
    "crates/la-pty",
    "crates/la-proto",
    "crates/la-ipc",
    "crates/la-adapter",
    "crates/la-storage",
    "crates/la-scheduler",
    "crates/la-core",
    "crates/la-daemon",
    "crates/la-tui",
    "integration/m0-smoke",
    "integration/m2-smoke",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/TinyWhite1997/LazyAgents"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1.7"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs", "process", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
portable-pty = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
schemars = { version = "0.8", features = ["preserve_order"] }
base64 = "0.22"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive"] }
uuid = { version = "1", features = ["v7"] }
nix = { version = "0.29", default-features = false, features = ["signal"] }
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
tempfile = "3"
cron = "0.16"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
la-pty = { path = "crates/la-pty" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", default-features = false, features = ["events", "event-stream", "windows"] }
vte = "0.15"
unicode-width = "0.2"
