[package]
name = "la-config"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LazyAgents config schema (`config.toml`) + load precedence + cross-platform path resolution."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
