[package]
name = "la-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Session manager + event bus for the LazyAgents daemon (la-core)"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
la-proto = { path = "../la-proto" }
la-ipc = { path = "../la-ipc" }
la-pty = { path = "../la-pty" }
la-adapter = { path = "../la-adapter" }
la-storage = { path = "../la-storage" }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
