[package]
name = "la-daemon"
version = "0.1.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LazyAgents daemon binary (`lad`): assembles core + storage + ipc with auto-socket-path and graceful shutdown (WEK-21 / M1.7)."

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
getrandom = "0.2"

la-proto = { path = "../la-proto" }
la-ipc = { path = "../la-ipc" }
la-core = { path = "../la-core" }
la-storage = { path = "../la-storage" }
la-adapter = { path = "../la-adapter" }
la-pty = { path = "../la-pty" }
la-scheduler = { path = "../la-scheduler" }
la-observ = { path = "../la-observ" }
la-config = { path = "../la-config" }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal", "process", "fs"] }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "process"] }
chrono-tz = { workspace = true }

[[bin]]
name = "lad"
path = "src/bin/lad.rs"
