[package]
name = "la-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Length-prefix framed JSON-RPC transport over UDS / Named Pipe for LazyAgents"

[dependencies]
la-proto = { path = "../la-proto" }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "fs", "process", "signal"] }
tracing-subscriber = { workspace = true }

[[bin]]
name = "la-ipc-cat"
path = "src/bin/la_ipc_cat.rs"
