[package]
name = "la-observ"
version = "0.1.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LazyAgents observability support: JSON tracing, crash reports, trace ids, and Prometheus text metrics."

[dependencies]
chrono = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
