[package]
name = "la-proto"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON-RPC 2.0 wire contracts for LazyAgents daemon ↔ client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bin]]
name = "la-proto-gen-schema"
path = "src/bin/gen_schema.rs"
