[package]
name = "la-pty"
version = "0.1.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform PTY abstraction for LazyAgents (la-pty)"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
