[package]
name = "la-scheduler"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cron scheduling engine (sleep_until heap + clock-skew + catch-up) for the LazyAgents daemon"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = []
# Exposes FakeClock / EventCollector etc. for downstream tests; on-by-default
# inside the crate's own test build.
test-util = []

[dev-dependencies]
la-scheduler = { path = ".", features = ["test-util"] }
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
