[package]
name = "la-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite storage, migrations, and repository layer for LazyAgents"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
la-scheduler = { path = "../la-scheduler" }
chrono = { workspace = true }
