[package]
name = "la-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI client (`la`) for LazyAgents: ratatui + crossterm Sessions sidebar plus the conversation main area (transcript, composer, detach toast)."

[dependencies]
# Architecture §2.1: la-tui MUST NOT depend on la-core / la-storage. Only the
# wire-contract + transport crates are permitted here. A clippy lint enforces
# this in CI; if a future change needs richer types, route them through
# la-proto instead.
la-proto = { path = "../la-proto" }
la-ipc = { path = "../la-ipc" }

ratatui = { workspace = true }
crossterm = { workspace = true }
vte = { workspace = true }
unicode-width = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[[bin]]
name = "la"
path = "src/bin/la.rs"
