[package]
name = "la-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI client (`la`) for LazyAgents: ratatui + crossterm Sessions sidebar plus the conversation main area (transcript, composer, detach toast)."

[dependencies]
# Architecture §2.1: la-tui MUST NOT depend on la-core / la-storage. Only the
# wire-contract + transport crates are permitted here. A clippy lint enforces
# this in CI; if a future change needs richer types, route them through
# la-proto instead.
la-proto = { path = "../la-proto" }
la-ipc = { path = "../la-ipc" }

ratatui = { workspace = true }
crossterm = { workspace = true }
vte = { workspace = true }
unicode-width = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# WEK-35 / M3.4 acceptance: "dry_run 与 scheduler 计算一致（共享 cron crate
# 调用）". la-tui uses the same workspace-pinned `cron` + `chrono`/`chrono-tz`
# versions as la-scheduler::cron_spec so the human preview / dry-run modal
# returns byte-identical fire times to what the daemon will schedule. We
# intentionally do NOT pull la-scheduler as a dep — the §2.1 architectural
# rule limits la-tui to la-proto + la-ipc + utility third-party crates, and
# CronSpec parsing is small enough to mirror locally.
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
# WEK-41 / M4.2: `la --check-update` 同步拉 GitHub Releases manifest.
# ureq is the smallest blocking HTTPS client that doesn't pull tokio's
# runtime into the call path. Stick to rustls (no native-tls / OpenSSL)
# so musl + windows builds don't have to link a system TLS lib.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tempfile = { workspace = true }

[[bin]]
name = "la"
path = "src/bin/la.rs"
