[package]
name = "m0-smoke"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "M0 integration smoke tests for LazyAgents"
publish = false

[dependencies]
bytes = { workspace = true }
la-ipc = { path = "../../crates/la-ipc" }
la-pty = { path = "../../crates/la-pty" }
serde_json = { workspace = true }
tokio = { workspace = true }
