[package]
name = "m2-multi-backend"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
la-adapter = { path = "../../crates/la-adapter" }
la-daemon = { path = "../../crates/la-daemon" }
la-ipc = { path = "../../crates/la-ipc" }
la-proto = { path = "../../crates/la-proto" }
la-tui = { path = "../../crates/la-tui" }
async-trait = { workspace = true }
bytes = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
